--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ buildscript {
     repositories {
         mavenCentral()
         jcenter()
+        google()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.5.2'
+        //classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         // in the individual module build.gradle files
     }
 }
@@ -17,7 +18,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com"}
     }
 }
 
